2008-09-23  16:10 Mike Park  <mike.park@nasa.gov>
	
	* src/FAUXGeom.c (initialize_faux) extended to understand 
	general_plane geometry type, which require a normal.
	(merged from branches/l2norm)

2008-01-03 14:30 Mike Park  <mike.park@nasa.gov>

	* Made 1.4.1 Release. For FUN3D offical relase 10.4.0 (r26514).
	
2007-12-06 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c () make GRID_VOLUME_TOL and GRID_AREA_TOL macros
	lowered to 1.0e-40.

2007-09-27  8:15 Mike Park  <mike.park@nasa.gov>

	* Made 1.4.0 Release. For FUN3D offical relase 10.4.0 (r26514).
	
2007-06-08 12:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridloadglobalnodedata_,gridsetlocalnodedata_)
	to handle ndim of 3 or 4 for compatability with old fun3d versions.

2007-06-08 10:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridsetlocalnodedata_) fix typo to freeze
	correct ghost node.

2007-06-07 13:25 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridloadglobalnodedata_,gridsetlocalnodedata_)
	update node frozen state with xyz. (this could be added to queue
	node data too)

2007-06-06 12:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchTForCost) line search T for volumr cost.

2007-06-05 15:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) modified to optimize volume cost
	for gridCOST_FCN_CONFORMITY.

2007-06-05 13:25 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridRestrictStoredCostToUV)
	projection/restriction to uv space of stored derivatives.

2007-06-05 12:55 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridStoreFaceCostParameterDerivatives) refactored to
	split storage and projection/restriction to uv space.

2007-06-05 12:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridUpdateStoredCost) To permit update of costs for
	chain-ruling surface parameterization

2007-06-04 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCellMetricConformityFD) finite difference